# sous-chef

./: .git_ignore  .gitignore  .gitmodules  Atom_Wishlist.md  CHANGELOG.md  DEVELOP.md  Pipeline Atom Wishlist.md  README.md  basic_datastrategy_sample.py  demo_deployment.py  email_flows.py  filter_sample.py  generate_documentation.py  multidocument_sample.py  onlinenews_sample.py  prefect.yaml  pyproject.toml  requirements.txt  run_flow.py  run_flow_click.py  run_recipe.py  run_yaml_pipeline.py  setup.py  simple_flow_author_1.py  simple_flow_author_2.py  task_documentation.yaml  test_csv.csv  test_pipeline.py  twittersample.py
.prefect/: flows.json
docs/: README.md  task_documentation.yaml
legacy_root_files/: email_flows.py  generate_docs.py
legacy_root_files/recipes/: keywords.yaml
pipeline/: FlowAtom.py  Pipeline.py  __init__.py  configuration_loaders.py  constants.py  datastrategy.py  flowatom.py  test.py
pipeline/Tasks/: DemoTasks.py
pipeline/tasks/: __init__.py  apply_model_tasks.py  csv_load_task.py  demodatatasks.py  demotasks.py  discovery_tasks.py  entity_extraction_tasks.py  filter_tasks.py  output_tasks.py  sentiment_tasks.py  simple_data_tasks.py
prefect/: prefect.yaml
sample_yaml/: BRAvCO_WorldcupTwitterSentiment_config.yaml  Basic_Datastrategy_sample_conf.yaml  ENGvFRA_WorldcupTwitterSentiment_config.yaml  Insta_Phil_Process.yaml  MORvPOR_WorldcupTwitterSentiment_config.yaml  NEDvARG_WorldcupTwitterSentiment_config.yaml  load_csv_test.yaml
samples/: basic_datastrategy_sample.py  basic_flow_sample.py  onlinenews_sample.py  twitter_worldcup_sample_bra_co.py  twittersample.py
scripts/: setup-secrets.py
sous_chef/: __init__.py  constants.py  datacollage.py  datastrategy.py  exceptions.py  flow.py  flowatom.py  recipe.py  recipe_loader.py  recipe_model.py  secrets.py  utils.py
sous_chef/artifacts/: __init__.py  aboutness.py  base.py  file_upload.py  llm_cost.py  mediacloud.py  runtime_timeline.py  zeroshot.py
sous_chef/flows/: __init__.py  aboutness_filter_flow.py  aboutness_filtered_summaries_flow.py  entities_demo_flow.py  full_text_download_flow.py  keywords_demo_flow.py  llm_demo_flow.py  llm_quotes_flow.py  matching_sentences.py  raw_text_flow.py  targeted_sentiment_flow.py  top_images_flow.py  zeroshot_demo_flow.py
sous_chef/params/: __init__.py  aboutness.py  csv_export.py  email_recipient.py  llm_params.py  mediacloud_query.py  webhook_callback.py  zeroshot.py
sous_chef/prompts/: __init__.py
sous_chef/prompts/aboutness/: v1.txt
sous_chef/runtime/: __init__.py  recorder.py
sous_chef/tasks/: __init__.py  aggregator_tasks.py  deduplication_tasks.py  discovery_tasks.py  email_tasks.py  entity_extraction_tasks.py  export_tasks.py  extraction_tasks.py  fetcher.py  filter_tasks.py  image_tasks.py  keyword_tasks.py  language_tasks.py  llm_aboutness.py  llm_article_summary.py  llm_base.py  llm_quotes.py  output_tasks.py  sentiment_tasks.py  simple_data_tasks.py  simple_tasks.py  tokenization_tasks.py  utils.py  zeroshot_tasks.py
sous_chef/test/: test_datacollage.py
sous_chef_legacy/: datastrategy.py  flowatom.py
sous_chef_legacy/legacy_root_files/: run_recipe.py
sous_chef_legacy/tasks/: csv_load_task.py  meta_tasks.py  output_tasks.py  sentiment_tasks.py  simple_data_tasks.py  utils.py
templates/: basic_email_template.j2
test_yaml/: QueryOnlineNewsTest.yaml
tests/: __init__.py  test_export_tasks.py  test_full_text_download_flow.py  test_runtime.py  test_zeroshot_tasks.py
tests/test_params/: aboutness_filtered_summaries_params.json  aboutness_params.json  matching_sentences_params.json  mc_query.json  mc_query_dedup.json  targeted_sentiment_params.json  test-vaccine.json  zeroshot_demo_params.json  zeroshot_with_hypothesis.json
(+20 files in other folders)
