[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sous-chef"
version="v2.2.4"
dependencies = [
  "matplotlib == 3.8.2",
  "mediacloud == 4.1.3",
  "mc-providers == 0.5.4",
  "wayback-news-search == 1.2.*",
  "numpy == 1.26.4",
  "pandas == 2.2.0",
  "prefect == 3.2.14",
  "prefect_aws",
  "prefect_email",
  "pydantic",
  "pytest == 8.0.0",
  "PyYAML == 6.0.1",
  "requests == 2.31.0",
  "spacy",
  "spacy-download",
  "spacy-ngram",
  "transformers == 4.37.2",
  "yake == 0.4.8",
  "boto3",
  "uniseg"
]
requires-python = ">=3.10"
authors = [
  {name = "Paige Gulley", email = "pgulley@mediacloud.org"}
]

description = "Sous-Chef is a yaml-configurable data pipeline tool for interacting with the Mediacloud data service"
readme = "README.md"

[tool.flit.module]
name = "sous_chef"
