[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sous-chef"
version = "v3.0.0-alpha-2"
description = "Sous-Chef data pipeline tool - Media cloud NLP pipeline configured via Python flows"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Paige Gulley", email = "pgulley@mediacloud.org"}
]

dependencies = [
  # Core data processing (numpy < 2.0 required by matplotlib 3.8.2)
  "pandas >= 2.2.0, < 3.0",
  "numpy >= 1.26.0, < 2.0",
  
  # Prefect orchestration (updated to v3.6.10)
  "prefect >= 3.6.10",
  "prefect_aws",
  "prefect_email",
  
  # Data validation and models
  "pydantic >= 2.12.5",
  
  # MediaCloud integration
  "mediacloud >= 4.1.3",
  "mc-providers >= 0.5.4",
  "wayback-news-search >= 1.2.0",
  
  # NLP and text processing
  "yake >= 0.6.0",
  "spacy",
  "spacy-download",
  "spacy-ngram",
  "transformers >= 4.37.2",
  "uniseg",
  
  # Utilities
  "click >= 8.3.1",
  "requests >= 2.32.5",
  "python-dotenv >= 1.2.1",
  "jinja2 >= 3.1.0",
  
  # Testing
  "pytest >= 8.0.0",
  
  # Visualization (requires numpy < 2.0)
  "matplotlib >= 3.8.2",
  
  # AWS/B2 storage
  "boto3",
]


[tool.flit.module]
name = "sous_chef"
